--- a/app/src/main/res/layout/preferencias.xml
+++ b/app/src/main/res/layout/preferencias.xml
@@ -24,13 +24,13 @@
                 android:id="@+id/nombre_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/telefono_text"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/textView"
                 android:layout_marginTop="38dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Nombre"
-                android:layout_below="@+id/textView"
-                android:layout_alignParentStart="true"
-                android:layout_alignEnd="@+id/telefono_text" />
+                android:text="Nombre" />
 
             <TextView
                 android:id="@+id/textView"
@@ -39,7 +39,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:text="Contacto de Emergencia"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/telefono_text"
@@ -52,16 +53,39 @@
                 android:inputType="phone"
                 android:text="Telefono" />
 
+
             <Button
                 android:id="@+id/guardar_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="ejecutarConfiguracion"
-                android:text="Guardar"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
+                android:layout_marginBottom="24dp"
                 android:layout_marginEnd="19dp"
-                android:layout_marginBottom="24dp" />
+                android:onClick="ejecutarConfiguracion"
+                android:text="Guardar" />
+
+            <EditText
+                android:id="@+id/mensaje_text"
+                android:layout_width="250dp"
+                android:layout_height="120dp"
+                android:layout_below="@+id/textView3"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                android:gravity="top"
+                android:inputType="text|textMultiLine"
+                android:text="Alerta su familiar se ha caído" />
+
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/telefono_text"
+                android:layout_marginTop="38dp"
+                android:text="Mensaje de Alerta"
+                android:textStyle="bold" />
         </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
 
